--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" data-theme="forest">
+<html lang="en" data-theme="night">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/Logo.svg" />
+		<link rel="icon" href="%sveltekit.assets%/servoskull.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
